--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "postinstall": "ngcc"
   },
   "private": true,
   "dependencies": {
@@ -18,11 +19,12 @@
     "@angular/fire": "^7.4.1",
     "@angular/flex-layout": "^14.0.0-beta.40",
     "@angular/forms": "^14.1.0",
-    "@angular/material": "^14.2.0",
+    "@angular/material": "^14.2.1",
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
     "firebase": "^9.9.1",
+    "ng2-search-filter": "^0.5.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
