--- a/package.json
+++ b/package.json
@@ -33,8 +33,11 @@
     "@angular-devkit/build-angular": "^14.1.0",
     "@angular/cli": "~14.1.0",
     "@angular/compiler-cli": "^14.1.0",
+    "@firebase/rules-unit-testing": "^2.0.5",
     "@types/jasmine": "~4.0.0",
+    "firebase-admin": "^11.2.0",
     "jasmine-core": "~4.2.0",
+    "jest": "^29.2.2",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
