--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "@ngrx/effects": "^14.3.2",
+    "@ngrx/router-store": "^14.3.2",
+    "@ngrx/store": "^14.3.2",
     "firebase": "^9.9.1",
     "ng2-search-filter": "^0.5.1",
     "rxjs": "~7.5.0",
